cython_example/src/math_ops.h

#ifndef MATH_OPS_H
#define MATH_OPS_H

// Function declarations
double add_numbers(double a, double b);
double multiply_numbers(double a, double b);
int factorial(int n);
void bubble_sort(double arr[], int n);

#endif